# libmvvm

./: .clang-format  .clangd  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: test.yml
example/: CMakeLists.txt  main.cpp
include/mvvm/: mvvm.hpp  observable_object.hpp  observable_property.hpp  property_proxy.hpp  relay_command.hpp  utils.hpp
test/: CMakeLists.txt  property_proxy.cpp  utils.cpp
